# APRP

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  PLAN.md  README.md  SPEC.md  bandit.yaml  compose.mirror.yaml  compose.yaml  pyproject.toml
aprp/: __init__.py  hooks.py  install.py  modules.txt  patches.txt
caddy/: Caddyfile
devcovenant/: README.md  cli.py  config.yaml  custom.py  demo.py  gate.py  quickstart.py
docs/: accounting.md  couriers.md  development.md  install.md  inventory.md  pos.md  purchasing.md  release.md  security.md  showcase.md  storefront.md  system.md
garbd/: Dockerfile
licenses/: THIRD_PARTY_LICENSES.md  build-1.4.4.txt  click-8.3.3.txt  filelock-3.29.0.txt  identify-2.6.19.txt  pip-26.1.txt  platformdirs-4.9.6.txt  pre_commit-4.6.0.txt  python-discovery-1.2.2.txt  virtualenv-21.2.4.txt  wheel-0.47.0.txt
ops/: backend_entrypoint.sh  backup.sh  backup_config.json  db_mirror_restore.sh  deploy.sh  deploy_config.json  deploy_mirror.sh  env.mirror.example  env.primary.example  galera_mysqld_base.cnf  garbd_entrypoint.sh  mariadb_galera_entrypoint.sh  opsconfig.py  opsconfig.yaml.example  proxysql_entrypoint.sh  rclone.conf.example  render_workflows.py  site_setup.sh  socketio_entrypoint.sh
tests/: __init__.py  test_aprp_accounting_services.py  test_aprp_baseline.py  test_aprp_core_contract.py  test_aprp_courier_adapter.py  test_aprp_courier_contract.py  test_aprp_courier_event.py  test_aprp_courier_services.py  test_aprp_courier_shipment.py  test_aprp_customer.py  test_aprp_intake_line.py  test_aprp_intake_session.py  (+31 more)
(+198 files in other folders)
