[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "APRP"
version = "0.4.0"
description = """
ERPNext-based infrastructure for businesses that outgrew \
spreadsheets, improvisation, and fragile integrations."""
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-only" }
